--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link type="text/css" rel="stylesheet" href="CSS/style.css">
-     <link rel="icon" href="VENDOR/IMG/logo.svg">
-     <title>JapanPic</title>
- </head>
- <body>
-     <!--Website header-->
-     <header>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="CSS/style.css">
+        <link rel="icon" href="VENDOR/IMG/logo.svg">
+        <script type="text/javascript" src="JS/index.js"></script>
+        <title>JapanPic</title>
+    </head>
+    <body>
+        <!--Website header-->
+        <header>
         <nav class="nnw-nav">
             <a href="#" class="nnw-logo">
                 <img src="VENDOR/IMG/logo.svg" alt="logo" class="nnw-logo-img">
                 <h1>JapanPic</h1>
             </a>
-            <a href="#" class="nnw-ham">
+            <a href="#" class="nnw-ham" onclick="menu()">
                 <img src="VENDOR/IMG/ham.svg" alt="ham-ico">
             </a>
             <ul class="nnw-navigation">
@@ -38,10 +39,12 @@
         </nav>
     </header>
     <section class="nnw-hero">
+        <h1 class="nnw-hero-title">Stunning images in one place</h1>
+        <h3 class="nnw-hero-subtitle">Sponsored by GDev</h3>
         <img src="VENDOR/IMG/main-banner.jpg" alt="main-banner" class="nnw-main-banner">
     </section>
-     <!--Website section-->
-     <section class="nnw-content">
+        <!--Website section-->
+        <section class="nnw-content">
         <h2 class="nnw-section-title">Gallery</h2>
         <ul class="nnw-gallery">
             <li class="nnw-gallery-card"><img src="VENDOR/IMG/gallery/pic-1.jpg" alt="pic-1" class="nnw-gallery-img"></li>
@@ -61,10 +64,10 @@
             <li class="nnw-gallery-card"><img src="VENDOR/IMG/gallery/pic-15.jpg" alt="pic-15" class="nnw-gallery-img"></li>
             <li class="nnw-gallery-card"><img src="VENDOR/IMG/gallery/pic-16.jpg" alt="pic-16" class="nnw-gallery-img"></li>
         </ul>
-     </section>
-     <!--Website footer-->
-     <footer class="nnw-footer">
+        </section>
+        <!--Website footer-->
+        <footer class="nnw-footer">
         <p>(c) 2020 GDev All Rights Reserved</p>
-     </footer>
- </body>
+        </footer>
+    </body>
  </html>
